<resources>
    <string name="app_name">TuneIn</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="action_sign_in">Tune In!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_register">Register</string>
    <string name="action_register">\"                               Register\"</string>
    <string name="signup_button">Sign up!</string>
    <string name="textViewSignin" translatable="false">Sign in</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="title_activity_audio_player">AudioPlayer</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_playlists">PlaylistsActivity</string>
    <string name="title_activity_playlist_songs">PlaylistSongs</string>
    <string name="title_activity_my_playlists">MyPlaylists</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_songs">Songs</string>
    <string name="title_activity_downloads">Downloads</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_favourite_playlists">FavouritePlaylists</string>
    <string name="title_activity_shared_playlist_songs">SharedPlaylistSongs</string>
    <string name="title_activity_conversations">Conversations</string>
    <!--<string name="enter_email" translatable="false">Email</string>-->
</resources>
