<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qmul.nminoiu.tunein.RealTimeActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">
...
            android:paddingBottom="90dp"
            android:scrollX="@dimen/activity_vertical_margin"
            android:visibility="visible">


            <include
                android:id="@+id/np1"
                layout="@layout/nowplaying_item"
                android:visibility="gone" />

            <include
                android:id="@+id/np2"
                layout="@layout/nowplaying_item"
...
        app:elevation="1dp"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_dialog_email" />


    <LinearLayout
        android:id="@+id/commentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <EditText
            android:id="@+id/commentArea"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.94"
            android:hint="Leave your thoughts here..."
            android:maxHeight="80dp"
            android:textColor="@color/cardview_light_background"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="#CFD8DC" />

        <ImageView
            android:id="@+id/commentButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:padding="4dp"
            android:src="@android:drawable/ic_menu_send" />

...
