...
            android:id="@+id/youtube"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/comment"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:background="@xml/roundcorner"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/youtubenotblack" />
...
